--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,3 +5,22 @@
 <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
 <script src="{{site.baseurl}}/js/docs.min.js"></script>
 <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+
+<footer class="bs-docs-footer" role="contentinfo">
+    <div class="container">
+
+        <p>Hope you like this book! </p>
+        <p>You can also check out my <a data-toggle="modal" data-target="#booklist" href="#">other books</a> or my <a href="{{site.url}}"> website.</a></p>
+        <ul class="bs-docs-footer-links text-muted">
+            <li><a href="{{site.url}}/blog">Blog</a></li>
+            <li>·</li>
+            <li><a href="https://github.com/xinghuangxu">GitHub</a></li>
+            <li>·</li>
+            <li><a href="https://www.facebook.com/xinghuang.xu">Facebook</a></li>
+            <li>·</li>
+            <li><a href="https://www.linkedin.com/pub/xinghuang-leon-xu/65/420/24a">Linkedin</a></li>
+            <li>·</li>
+            <li><a href="mailto:xinghuangxu@gmail.com">Email</a></li>
+        </ul>
+    </div>
+</footer>
