--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
     <title>X.X.</title>
 
     <!-- Bootstrap -->
-    <link href="{{site.baseurl}}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{site.baseurl}}css/docs.min.css" rel="stylesheet">
-    <link href="{{site.baseurl}}css/custom.css" rel="stylesheet">
+    <link href="../asset/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../asset/css/docs.min.css" rel="stylesheet">
+    <link href="../asset/css/custom.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
