--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,13 @@
     <link href="../asset/css/bootstrap.min.css" rel="stylesheet">
     <link href="../asset/css/docs.min.css" rel="stylesheet">
     <link href="../asset/css/custom.css" rel="stylesheet">
-
+    <style>
+        code.has-jax {font: inherit;
+                      font-size: 100%;
+                      background: inherit;
+                      border: inherit;
+                      color: #515151;}
+    </style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
