--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,11 +31,12 @@
     });
 </script>
 
+
 <footer class="bs-docs-footer" role="contentinfo">
     <div class="container">
 
         <p>Hope you like this book! </p>
-        <p>You can also check out my <a data-toggle="modal" data-target="#booklist" href="#">other books</a> or my <a href="{{site.url}}"> website.</a></p>
+        <p>You can also check out my <a href="../">bookstore</a> or my <a href="{{site.url}}"> website.</a></p>
         <ul class="bs-docs-footer-links text-muted">
             <li><a href="{{site.url}}/blog">Blog</a></li>
             <li>·</li>
