--- a/_layouts/bookstore.html
+++ b/_layouts/bookstore.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <title>Xinghuang Xu</title>
     <link rel="stylesheet" href="asset/css/masonry-docs.css" media="screen">
-    <script src="asset/js/masonry-docs.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 </head>
 <body>
@@ -34,6 +34,7 @@
 
 </div>
 
+<script src="asset/js/masonry-docs.min.js"></script>
 
 
 </body>
